<resources>
    <string name="insert_anime_title">Insert Anime Title Here…</string>
    <string name="search">Search</string>

    <string-array name="dashboard_title">
        <item>Anime</item>
        <item>Manga</item>
    </string-array>

    <!--Utility-->
    <string name="not_found">No Result Found</string>
    <string name="no_information_by_mal">No information provided by the MAL Website</string>

    <!--Detail Screen-->
    <string name="cover_image">Cover Image</string>
    <string name="type">Type</string>
    <string name="status_detail">Status</string>
    <string name="episode_detail">Episode</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="aired">Aired</string>
    <string name="rank_and_score">#%s - %s</string>
    <string name="rated_by">Rated by %d people</string>
    <string name="information_value">:\t%s</string>
    <string name="sample_lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="characters_holder">Characters\t:</string>
    <string name="episodes_holder">Episodes\t:</string>

    <!--Loading Status-->
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>

    <!--Item List Anime-->
    <string name="rating_item_anime">Rating\t\t\t\t\t:\t%s</string>
    <string name="episode_item_anime">Episodes\t\t\t:\t%s</string>
    <string name="status_item_anime">Status\t\t\t\t\t:\t%s</string>

    <!--Menu Bottom Sheet-->
    <string name="menu">Menu</string>
    <string name="menu_to_detail">%s - %s</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="share_anime">Share Anime</string>

    <!--Main Page-->
    <string name="this_season">This Season</string>
    <string name="searching_for">Searching for %s</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="fetching_data_please_wait">Fetching Data, Please Wait</string>
    <string name="season">Season</string>
    <string name="list_of_anime_characters">List of anime characters</string>
    <string name="episodes_updated">Data is successfully updated</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendation">Recommendation</string>
    <string name="showing_next_recommendation">for showing next recommendation</string>


    <!--Item List Manga-->
    <string name="score_holder">Score</string>
    <string name="chapter_holder">Chapter</string>
    <string name="volume_holder">Volume</string>
    <string name="status_holder">Status</string>
</resources>