<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_header_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/characters_holder"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/list_of_anime_characters"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_character"
        tools:itemCount="1"
        tools:listitem="@layout/item_card_character"
        tools:visibility="visible" />

    <include
        android:id="@+id/character_placeholder"
        layout="@layout/detail_anime_character_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_header_character" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_message"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_retry"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="24dp"
        tools:text="No Internet Connection" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/retry"
        android:visibility="gone"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error_message"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>