<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent"
    android:theme="@style/Theme.LeleNimeXML"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cover_anime"
            android:layout_width="100dp"
            android:layout_height="134dp"
            android:scaleType="centerCrop"
            android:transitionName="cover_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_cover_anime"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold"
                android:transitionName="tv_anime_title"
                tools:text="Chainsaw-Man" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rating_anime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?android:attr/textColorPrimary"
                    app:fontFamily="sans-serif-medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/rating_item_anime" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/cover_image"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="@id/tv_rating_anime"
                    app:layout_constraintStart_toEndOf="@id/tv_rating_anime"
                    app:layout_constraintTop_toTopOf="@id/tv_rating_anime"
                    app:tint="?android:attr/textColorPrimary" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_episode_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:attr/textColorPrimary"
                app:fontFamily="sans-serif-medium"
                tools:text="@string/episode_item_anime" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status_anime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:attr/textColorPrimary"
                app:fontFamily="sans-serif-medium"
                tools:text="@string/status_item_anime" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>